# imageprocessor

./: Blur.cpp  Blur.h  CMakeLists.txt  GrayScale.cpp  GrayScale.h  Negative.cpp  Negative.h  Sharpening.h  Vignette.cpp  Vignette.h  color.h  crop.cpp  crop.h  edge.cpp  edge.h  file_load.cpp  file_load.h  filter.h  image.cpp  image.h  image_processor.cpp  matrix_convolution.h  multifilter.cpp  multifilter.h  parser.cpp  parser.h
